(#1772): matchscheibennummer zu scheibennummer in der tableteingabe geändert (#475)
* (#1772): matchscheibennummer zu scheibennummer in der tableteingabe geändert